--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "markdownlint": "^0.38.0",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "typescript": "5.8.3"
   },
   "peerDependencies": {
     "typescript": "^5"
