feat: add nx monorepo setup and documentation
- Initialize nx workspace configuration
- Add comprehensive technical documentation for extension development
- Update markdownlint line length configuration
- Add nx and vitest dependencies

--- a/package.json
+++ b/package.json
@@ -24,17 +24,27 @@
     "@raycast/api": "^1.102.3"
   },
   "devDependencies": {
+    "@nx/eslint": "^21.3.10",
+    "@nx/js": "^21.3.10",
+    "@nx/vite": "^21.3.10",
     "@raycast/eslint-config": "^2.0.4",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
     "@types/bun": "latest",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.9",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
+    "@vitejs/plugin-react": "^4.7.0",
+    "@vitest/ui": "^3.2.4",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
+    "jsdom": "^26.1.0",
     "markdownlint": "^0.38.0",
+    "nx": "21.3.10",
     "prettier": "^3.6.2",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "vitest": "^3.2.4"
   },
   "peerDependencies": {
     "typescript": "^5"
