--- a/src/getting-started/tsconfig.json
+++ b/src/getting-started/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "include": ["../../tsconfig.json", "src/**/*", "raycast-env.d.ts"],
+  "extends": "../../tsconfig.json",
+  "include": ["src/**/*", "raycast-env.d.ts"],
   "compilerOptions": {
     "lib": ["ES2023"],
     "module": "commonjs",
