--- a/.markdownlint.jsonc
+++ b/.markdownlint.jsonc
@@ -72,7 +72,7 @@
     // Number of characters for code blocks
     "code_block_line_length": 120,
     // Include code blocks
-    "code_blocks": true,
+    "code_blocks": false,
     // Include tables
     "tables": true,
     // Include headings
