build(tsconfig): add path alias for src directory docs: update cicd deployment documentation with import

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,9 @@
     "skipLibCheck": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "types": ["node"]
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "**/*.mts", "**/*.cts", "**/*.d.ts"],
