build: update tsconfig and package.json configurations
- Change module system from commonjs to ESNext in root tsconfig
- Add baseUrl and paths aliases in getting-started tsconfig
- Add vitest scripts to package.json
- Improve build error handling in CI/CD docs

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier . --check",
-    "prettier:fix": "prettier . --write"
+    "prettier:fix": "prettier . --write",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@raycast/api": "^1.102.3"
